add link github

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           Docs
         </a>
         <a
-          href="#"
+          href="https://github.com/lelinh014756/fui-toast-js"
+          target="_blank"
           class="py-4 px-6 rounded-lg font-bold text-center bg-gradient-to-b from-white to-[#f8eedb] text-[#482307] shadow-md min-w-[150px] flex items-center gap-x-3 justify-center"
         >
           <svg
