chỉnh sửa tên class và tên id toastify

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="h-screen overflow-hidden bg-[#FFF8E4]">
-    <div id="toast"></div>
+    <div id="fui-toast"></div>
     <div class="flex flex-col justify-center h-full items-center relative">
       <div>
         <img
