chỉnh sauwr 1 vài logic và css, thay đổi tên thư mục

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FUI Toast Js</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/fuiToast.min.css">
+    <link rel="stylesheet" href="/assets/css/toast@1.0.0/fuiToast.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="h-screen overflow-hidden bg-[#FFF8E4]">
@@ -92,7 +92,7 @@
       </div>
     </div>
   </body>
-  <script src="/assets/js/fuiToast.min.js"></script>
+  <script src="/assets/js/toast@1.0.0/fuiToast.min.js"></script>
   <script>
     FuiToast.configs({
       icon: `😍`,
